# flatpak

./: .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .papr.yml  .redhat-ci.Dockerfile  .redhat-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  Makefile  Makefile-libglnx.am  Makefile.am  Makefile.gtester  NEWS  README  README.md  SECURITY.md  TODO.md  acinclude.m4  autogen.sh  configure.ac  dbus-proxy.c  flatpak-docs.html  flatpak.pc.in  glnx-alloca.h  glnx-backport-autocleanups.h  glnx-backport-autoptr.h  glnx-backport-testutils.c  glnx-backport-testutils.h  glnx-backports.c  glnx-backports.h  glnx-chase.c  glnx-chase.h  glnx-console.c  glnx-console.h  glnx-dirfd.c  (+67 more)
app/: Makefile.am.inc  flatpak-builtins-add-remote.c  flatpak-builtins-alias.c  flatpak-builtins-bind-mount.c  flatpak-builtins-build-bundle.c  flatpak-builtins-build-commit-from.c  flatpak-builtins-build-export.c  flatpak-builtins-build-finish.c  flatpak-builtins-build-import-bundle.c  flatpak-builtins-build-init.c  flatpak-builtins-build-sign.c  flatpak-builtins-build-update-repo.c  flatpak-builtins-build.c  flatpak-builtins-config.c  flatpak-builtins-create-usb.c  flatpak-builtins-delete-remote.c  flatpak-builtins-document-export.c  flatpak-builtins-document-forward.c  flatpak-builtins-document-info.c  flatpak-builtins-document-list.c  flatpak-builtins-document-unexport.c  flatpak-builtins-document.c  flatpak-builtins-enter.c  flatpak-builtins-history.c  flatpak-builtins-info-remote.c  flatpak-builtins-info.c  flatpak-builtins-install.c  flatpak-builtins-installations-add.c  flatpak-builtins-installations-list.c  flatpak-builtins-installations-remove.c  flatpak-builtins-kill.c  flatpak-builtins-list-remotes.c  flatpak-builtins-list.c  flatpak-builtins-ls-remote.c  flatpak-builtins-make-current.c  flatpak-builtins-mask.c  flatpak-builtins-override.c  flatpak-builtins-permission-add.c  flatpak-builtins-permission-list.c  flatpak-builtins-permission-remove.c  (+69 more)
common/: Makefile.am.inc  describe-fd.c  describe-fd.h  flatpak-appdata-private.h  flatpak-appdata.c  flatpak-auth-private.h  flatpak-auth.c  flatpak-bundle-ref.c  flatpak-bundle-ref.h  flatpak-bwrap-private.h  flatpak-bwrap.c  flatpak-bwrap.h  flatpak-chain-input-stream-private.h  flatpak-chain-input-stream.c  flatpak-chain-input-stream.h  flatpak-common-types-private.h  flatpak-common-types.h  flatpak-context-private.h  flatpak-context.c  flatpak-context.h  flatpak-db.c  flatpak-db.h  flatpak-dir-private.h  flatpak-dir-utils-private.h  flatpak-dir-utils.c  flatpak-dir.c  flatpak-dir.h  flatpak-docker-reference-private.h  flatpak-docker-reference.c  flatpak-enum-types.c.template  flatpak-enum-types.h.template  flatpak-error.c  flatpak-error.h  flatpak-exports-private.h  flatpak-exports.c  flatpak-exports.h  flatpak-glib-backports-private.h  flatpak-glib-backports.c  flatpak-image-collection-private.h  flatpak-image-collection.c  (+116 more)
completion/: _flatpak  flatpak  flatpak-coredumpctl  flatpak.fish  meson.build  xdg-app
data/: Makefile.am.inc  flatpak-docker-seccomp.json  flatpak-variants.gv  meson.build  org.freedesktop.DBus.Containers1.xml  org.freedesktop.Flatpak.Authenticator.xml  org.freedesktop.Flatpak.xml  org.freedesktop.XdgApp.xml  org.freedesktop.impl.portal.Documents.xml  org.freedesktop.impl.portal.PermissionStore.xml  org.freedesktop.portal.Documents.xml  org.freedesktop.portal.FileChooser.xml  org.freedesktop.portal.Flatpak.xml  org.freedesktop.portal.documents.xml  org.freedesktop.systemd1.xml  org.gnome.Shell.Introspect.xml  to_backend.xsl
doc/: Makefile.am  devices.md  docbook.css  flatpak-alias.xml  flatpak-build-bundle.xml  flatpak-build-commit-from.xml  flatpak-build-export.xml  flatpak-build-finish.xml  flatpak-build-import-bundle.xml  flatpak-build-init.xml  flatpak-build-sign.xml  flatpak-build-update-repo.xml  flatpak-build.xml  flatpak-builder.xml  flatpak-config.xml  flatpak-create-usb.xml  flatpak-docs.xml.in  flatpak-document-export.xml  flatpak-document-info.xml  flatpak-document-list.xml  flatpak-document-unexport.xml  flatpak-documents.xml  flatpak-enter.xml  flatpak-export-file.xml  flatpak-flatpakref.xml  flatpak-flatpakrepo.xml  flatpak-history.xml  flatpak-info.xml  flatpak-install.xml  flatpak-installation.xml  flatpak-kill.xml  flatpak-list.xml  flatpak-make-current.xml  flatpak-manifest.xml  flatpak-mask.xml  flatpak-metadata.xml  flatpak-override.xml  flatpak-permission-add.xml  flatpak-permission-list.xml  flatpak-permission-remove.xml  (+74 more)
env.d/: 60-flatpak  60-flatpak-system-only  flatpak.env.in  meson.build
oci-authenticator/: Makefile.am.inc  flatpak-oci-authenticator.c  flatpak-oci-authenticator.service.in  meson.build  org.flatpak.Authenticator.Oci.service.in
portal/: Makefile.am.inc  flatpak-portal-app-info.c  flatpak-portal-app-info.h  flatpak-portal.c  flatpak-portal.h  flatpak-portal.service.in  meson.build  org.freedesktop.portal.Flatpak.service.in  portal-impl.c  portal-impl.h
revokefs/: Makefile.am.inc  demo.c  main.c  meson.build  writer.c  writer.h
selinux/: Makefile.am.inc  build-selinux.sh  flatpak.fc  flatpak.if  flatpak.te  meson.build
session-helper/: Makefile.am.inc  background-monitor.c  background-monitor.h  flatpak-permission-store.c  flatpak-permission-store.h  flatpak-session-helper.c  flatpak-session-helper.h  flatpak-session-helper.service.in  meson.build  org.freedesktop.Flatpak.service.in  org.freedesktop.XdgApp.service.in  xdg-app-permission-store.c  xdg-app-permission-store.h  xdg-app-session-helper.c  xdg-app-session-helper.service.in  xdg-app-session.service.in  xdg-app.gresource.xml
sideload-repos-systemd/: Makefile.am.inc  flatpak-create-sideload-symlinks.sh  flatpak-sideload-repos-dir.service  flatpak-sideload-usb-repo.path.in  flatpak-sideload-usb-repo.service.in  meson.build
system-helper/: Makefile.am.inc  flatpak-system-helper.c  flatpak-system-helper.h  flatpak-system-helper.service.in  flatpak.conf.in  meson.build  org.freedesktop.Flatpak.SystemHelper.conf  org.freedesktop.Flatpak.SystemHelper.service.in  (+9 more)
tests/: data1  (+134 more)
(+329 files in other folders)
